[workspace]
resolver = "2"
members = [".", "reime"]

[package]
name = "miel"
description = "A simple rendering framework leveraging the Vulkan API"
version = "0.2.0"
repository = "https://github.com/Ithyx/miel"
license = "MIT OR Apache-2.0"
readme = "README.md"

edition = "2024"

include = ["/.readme", "/src", "README.md"]

[dependencies]
log = "0.4.27"
thiserror = "2.0.15"

bytemuck = "1.23.2"
uuid = { version = "1.18.0", features = ["v4"] }

glam = "0.30.5"
ply-rs = "0.1.3"
tobj = "4.0.3"

ash = "0.38.0"
ash-window = "0.13.0"
winit = "0.30.12"

gpu-allocator = "0.27.0"
